# hardmatrix-examples

./: .gitignore  README.md  fusesoc.conf  pyproject.toml
blog/: testing-rtl-with-cocotb-and-axi-stream.md
examples/pytorch-custom-device/: .gitignore  Makefile  README.md  fusesoc_setup.sh  pyproject.toml  setup.py
examples/pytorch-custom-device/cpp/driver/: Makefile
examples/pytorch-custom-device/cpp/driver/src/: hal.c
examples/pytorch-custom-device/cpp/ops/: add.cpp  allocator.cpp  allocator.h  backend.cpp  backend.h  init.cpp  ops.cpp  sub.cpp
examples/pytorch-custom-device/hw/: README.md
examples/pytorch-custom-device/hw/axi4_lite/src/: axi4lite_intf.sv
examples/pytorch-custom-device/hw/chisel/vector_adder_machine/: .mill-jvm-opts  build.mill  vector_adder_machine.core
examples/pytorch-custom-device/hw/chisel/vector_adder_machine/rdl/: vector_adder_machine.rdl
examples/pytorch-custom-device/include/: api.h  remote_api.h
examples/pytorch-custom-device/mydev/: __init__.py  _device.py
examples/pytorch-custom-device/renode/: README.md  platform.repl
examples/pytorch-custom-device/renode/buildroot/: README.md  build.sh  kernel.fragment  tensor_soc.dts
examples/pytorch-custom-device/renode/buildroot/overlay/: init
examples/pytorch-custom-device/renode/images/: README.md  SHA256SUMS  tensor_soc.dtb
examples/pytorch-custom-device/renode/relay/: Makefile  README.md  relay.c
examples/pytorch-custom-device/renode/resc/: README.md  boot_headless.resc  boot_interactive.resc  vam_regtest.resc
examples/pytorch-custom-device/renode/verilator/: README.md  build.sh  sim_renode.cpp
examples/pytorch-custom-device/scripts/: run_tests.sh
examples/pytorch-custom-device/tests/: test_pytorch_mock.py  test_pytorch_remote.py
openwiki/: index.md  (+3 more)
(+38 files in other folders)
